# k8s-model-generator

./: LICENSE  README.md  pyproject.toml
src/k8s_model_generator/: cmd.py  generator.py  schema_exporter.py
src/k8s_model_generator/openapi/: schema.py  v3.py
tests/: conftest.py  test_cmd.py  test_generator.py  test_openapi.py  test_schema_exporter.py  utils.py
tests/resources/: openapi.json
